# didactic-potato

./: .gitignore  Dual-Branch-2.ipynb  Dual-Branch.ipynb  ResNetModel2.ipynb  ResNetModel3.ipynb  adni_clean_image_ids.txt  adni_massive_ids.txt  adni_search_result_cleaner.py  adni_visual_inspect.ipynb  batch_harmonize.py  convert_adni.py  flatten_dataset.py  model1_results.csv  model2_results.csv  notebook1_eda_preprocessing.ipynb  notebook2_model1_3d_resnet_like_classification.ipynb.ipynb  pyproject.toml  test_df.csv  train_df.csv  val_df.csv
ADNI/: ADNI_002_S_0295_AV45_Coreg__Avg__Standardized_Image_and_Voxel_Size_S111274_I240520.xml  ADNI_002_S_0295_MPR-R__GradWarp__B1_Correction__N3_S13407_I45112.xml  ADNI_002_S_0413_AV45_Coreg__Avg__Standardized_Image_and_Voxel_Size_S112220_I241477.xml  ADNI_002_S_0413_MPR__GradWarp__B1_Correction__N3__Scaled_2_S13893_I118673.xml  ADNI_002_S_0685_AV45_Coreg__Avg__Standardized_Image_and_Voxel_Size_S89330_I187802.xml  ADNI_002_S_0685_MPR-R__GradWarp__B1_Correction__N3_S16308_I40687.xml  ADNI_002_S_1261_AV45_Coreg__Avg__Standardized_Image_and_Voxel_Size_S101512_I224336.xml  ADNI_002_S_1261_MPR-R__GradWarp_S26573_I62269.xml  ADNI_002_S_1280_AV45_Coreg__Avg__Standardized_Image_and_Voxel_Size_S110656_I239539.xml  ADNI_002_S_1280_MPR-R__GradWarp__B1_Correction__N3_S26452_I60060.xml  ADNI_002_S_4213_AV45_Coreg__Avg__Standardized_Image_and_Voxel_Size_S123323_I259145.xml  ADNI_002_S_4213_MT1__N3m_S121165_I255410.xml  ADNI_002_S_4225_AV45_Coreg__Avg__Standardized_Image_and_Voxel_Size_S126070_I262294.xml  (+905 more)
(+916 files in other folders)
