[project]
name = "didactic-potato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antspyx>=0.6.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nibabel>=5.4.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]
